[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/viruses/virus_Common.png" type="Texture" id=1]
[ext_resource path="res://scripts/viruses/rainbowServantVirus.gd" type="Script" id=2]
[ext_resource path="res://animations/viruses/commonVirusHit.tres" type="Animation" id=3]
[ext_resource path="res://animations/viruses/commonVirusDeath.tres" type="Animation" id=4]
[ext_resource path="res://scenes/bullets/virus/VirusBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sounds/virusDamage.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/laser.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0

[sub_resource type="Shader" id=2]
resource_local_to_scene = true
code = "shader_type canvas_item;
render_mode unshaded;

uniform float Shift_Hue;

void fragment() {
// Input:3
	vec3 input_color;
	vec4 texture_color = texture(TEXTURE, UV);
	input_color = texture_color.rgb;

// VectorFunc:2
	vec3 color_hsv;
	{
		vec3 c = input_color;
		vec4 K = vec4(0.0, -1.0 / 3.0, 2.0 / 3.0, -1.0);
		vec4 p = mix(vec4(c.bg, K.wz), vec4(c.gb, K.xy), step(c.b, c.g));
		vec4 q = mix(vec4(p.xyw, c.r), vec4(c.r, p.yzx), step(p.x, c.r));
		float d = q.x - min(q.w, q.y);
		float e = 1.0e-10;
		color_hsv=vec3(abs(q.z + (q.w - q.y) / (6.0 * d + e)), d / (q.x + e), q.x);
	}

	color_hsv.x = mod((color_hsv.x + Shift_Hue), 1.0f);

// VectorFunc:5
	vec3 color_rgb;
	{
		vec3 c = color_hsv;
		vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
		vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
		color_rgb=c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
	}

// Output:0
	texture_color = vec4(color_rgb.rgb,texture_color.a);
	COLOR.rgba = texture_color;

}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/Shift_Hue = 0.0

[node name="rainbowServantVirus" type="Area2D"]
script = ExtResource( 2 )
scoreValue = 100
maxHealth = 3.0
shootingCooldownFrom = 2.0
shootingCooldownTo = 3.0
HeartDropChance = 50
projectile = ExtResource( 6 )
damageSounds = [ ExtResource( 7 ) ]
shootingSound = ExtResource( 8 )
damageAnimation = ExtResource( 3 )
deathAnimation = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="rotating" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="rainbow" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="moving" type="Tween" parent="."]

[node name="fleeing" type="Tween" parent="."]

[node name="tripleShootingTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="tween_all_completed" from="moving" to="." method="_on_moving_tween_all_completed"]
[connection signal="tween_all_completed" from="fleeing" to="." method="_on_fleeing_tween_all_completed"]
[connection signal="timeout" from="tripleShootingTimer" to="." method="_on_tripleShootingTimer_timeout"]
